--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Instant Music Downloader</title>
+  <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="./public/b124bec3d66a2331e286f87298716c24.css" rel="stylesheet">
+  <link href="./src/styles/index.css" rel="stylesheet">
 </head>
 
 <body>
