pwnd! Thank You Yashshah!
oh my stars!
It's beautiful!
I think I'm gonna cry!
But... how can I with all this awesome music?
Time to go share as it has been shared with me!

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Instant Music Downloader</title>
+  <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="b124bec3d66a2331e286f87298716c24.css" rel="stylesheet">
 </head>
