me breaky long time

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="./src/styles/index.css" rel="stylesheet">
+  <link href="./public/b124bec3d66a2331e286f87298716c24.css" rel="stylesheet">
 </head>
 
 <body>
