--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet">
+	<link rel="shortcut icon" href="favicon.png">
 </head>
 
 <body>
