--- a/index.html
+++ b/index.html
@@ -7,10 +7,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.png">
+	  <style>
+  # info {
+    position:absolute;
+    bottom:12px;
+    right:12px;
+  }
+	</style>
 </head>
 
 <body>
   <div id="app"></div>
+	  <button id="info" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
+			<img src="info-icon.png"/></button>
+	
+	  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Stay Tuned!</h4>
+        </div>
+        <div class="modal-body">
+          <p>More to come soon!</p>
+          <img src="liquid.gif"/>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
+    </div>
+  </div>
+	
   <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> 
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
