--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.png">
 	  <style>
-  # info {
+  #info {
     position:absolute;
     bottom:12px;
     right:12px;
@@ -19,7 +19,7 @@
 <body>
   <div id="app"></div>
 	  <button id="info" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
-			<img src="info-icon.png"/></button>
+			<img src="info-icon.png"  width="60px" height="60px"/></button>
 	
 	  <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
