--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.png">
+	
+	<!--DELETE if broken!-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	
 	  <style>
   #info {
     position:absolute;
@@ -19,7 +25,7 @@
 <body>
   <div id="app"></div>
 	  <button id="info" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
-			<img src="info-icon.png"  width="60px" height="60px"/></button>
+			<img src="info-icon.png"  width="56px" height="56px"/></button>
 	
 	  <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
