--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 <body>
   <div id="app"></div>
-	  <button id="info" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">
-			<img src="info-icon.png"  width="56px" height="56px"/></button>
+	  <a id="info" type="button" class="btn btn-info btn-lg btn-circle" data-toggle="modal" data-target="#myModal">
+			<img src="info-icon.png"  width="56px" height="56px"/></a>
 	
 	  <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
