--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 
 <body>
   <div id="app"></div>
+   <div style="position:absolute;bottom:10px;right:10px;width: 56px;height:56px;">
 	  <a id="info" type="button" class="btn btn-info btn-lg btn-circle" data-toggle="modal" data-target="#myModal">
-			<img src="info-icon.png"  width="56px" height="56px"/></a>
+			<img src="info-icon.png"  width="56px" height="56px"/></a></div>
 	
 	  <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
