--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
 <body>
   <div id="app"></div>
-   <div style="position:absolute;bottom:10px;right:10px;width: 56px;height:56px;">
-	  <a id="info" type="button" class="btn btn-info btn-lg btn-circle" data-toggle="modal" data-target="#myModal">
-			<img src="info-icon.png"  width="56px" height="56px"/></a></div>
+	  <a style="position:absolute;bottom:10px;right:10px;" id="info" type="button" class="btn btn-info btn-lg btn-circle" data-toggle="modal" data-target="#myModal">
+			<img src="info-icon.png"  width="56px" height="56px"/></a>
 	
 	  <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
