--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <div id="app"></div>
-	  <a style="position:absolute;bottom:10px;right:10px;" id="info" type="button" class="btn btn-info btn-lg btn-circle" data-toggle="modal" data-target="#myModal">
+	  <a style="position:absolute;bottom:10px;right:10px;" id="info" type="button" class="btn btn-default btn-lg btn-circle" data-toggle="modal" data-target="#myModal">
 			<img src="info-icon.png"  width="56px" height="56px"/></a>
 	
 	  <!-- Modal -->
