--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <div id="app"></div>
-	<a id="qr" href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk" style="position:absolute;top:0px;right:0px;"><img src="dlqr.png" width="120px" height="120px"/></a>
+  <div id="app" style=""></div>
+	<a id="qr" href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk" style="position:absolute;bottom:4px;right:4px;"><img src="dlqr.png" width="100px" height="100px"/></a>
   <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> 
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
