--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div id="app" style=""></div>
+  <div id="app" style="position:absolute;top:100px;"></div>
 	<a id="qr" href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk" style="position:absolute;bottom:4px;right:4px;"><img src="dlqr.png" width="100px" height="100px"/></a>
   <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> 
