--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <meta charset="utf-8">
   <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	 <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/css/materialize.min.css">
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.1/js/materialize.min.js"></script>
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.png">
 	<style>
@@ -16,8 +17,33 @@
 
 <body>
   <div id="app"></div>
+	
+	<div class="fixed-action-btn vertical" style="position: absolute; display: inline-block; right: 19px;">
+  <a class="btn-floating btn-large" style="background-color:#212121; color:#FFFFFF;">
+    <i class="mdi-social-notifications-none"></i>
+  </a>
+  <ul>
+  <li><a class="btn-floating black"><i class="large mdi-editor-insert-chart"></i></a>
+  </li>
+  <li><a class="btn-floating black"><i class="large mdi-editor-format-quote"></i></a>
+  </li>
+  <li><a class="btn-floating black"><i class="large mdi-editor-publish"></i></a>
+  </li>
+  <li><a class="btn-floating black"><i class="large mdi-editor-attach-file"></i></a>
+  </li>
+</ul>
+</div>
+	
+	
+	
+	
+	
+	
+	
+	<!--
 	<a id="qr" href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk" style="position:absolute;bottom:0px;right:2px;"><img src="dlqr.png" width="100px" height="100px"/></a>
-  <script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
+  -->
+	<script type="text/javascript" src="./public/7febcca36d7e06875dc4.js"></script>
 	<!-- Go to www.addthis.com/dashboard to customize your tools --> 
 	<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58358a470886e994"></script> 
 </body>
