--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
   <div id="app"></div>
 	
-	<div class="fixed-action-btn vertical" style="position: absolute; display: inline-block; right: 19px;">
-  <a class="btn-floating btn-large" style="background-color:#212121; color:#FFFFFF;">
-    <i class="mdi-social-notifications-none"></i>
+	<div class="fixed-action-btn vertical" style="position: absolute; display: inline-block; right: 10px;">
+  <a class="btn-floating btn-large">
+    <i src="info.png"></i>
   </a>
   <ul>
   <li><a class="btn-floating black"><i class="large mdi-editor-insert-chart"></i></a>
