--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body>
   <div id="app"></div>
 	
-	<div class="fixed-action-btn vertical" style="position: absolute; display: inline-block; right: 10px;">
+	<div class="fixed-action-btn vertical" style="position: absolute; display: inline-block; right: 10px;bottom:10px;">
   <a class="btn-floating btn-large">
-    <i src="info.png"></i>
+    <img src="info.png"/>
   </a>
   <ul>
   <li><a class="btn-floating black"><i class="large mdi-editor-insert-chart"></i></a>
