--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="app"></div>
 	
-	<div class="fixed-action-btn vertical" style="position: absolute; display: inline-block; right: 10px;bottom:10px;">
+	<div class="fixed-action-btn vertical" style="background-color:#212121; position: absolute; display: inline-block; right: 10px;bottom:10px;">
   <a class="btn-floating btn-large">
     <img src="info.png"/>
   </a>
