--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
   <div id="app"></div>
 	
-	<div class="fixed-action-btn vertical" style="background-color:#212121; position: absolute; display: inline-block; right: 10px;bottom:10px;">
-  <a class="btn-floating btn-large">
+	<div class="fixed-action-btn vertical" style="position: absolute; display: inline-block; right: 10px;bottom:10px;">
+  <a class="btn-floating btn-large"style="background-color:#212121;">
     <img src="info.png"/>
   </a>
   <ul>
