--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <img src="info.png"/>
   </a>
   <ul>
-  <li><a class="btn-floating black"><i class="large mdi-editor-insert-chart"></i></a>
+  <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-insert-chart"></i></a>
   </li>
-  <li><a class="btn-floating black"><i class="large mdi-editor-format-quote"></i></a>
+  <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-format-quote"></i></a>
   </li>
-  <li><a class="btn-floating black"><i class="large mdi-editor-publish"></i></a>
+  <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-publish"></i></a>
   </li>
-  <li><a class="btn-floating black"><i class="large mdi-editor-attach-file"></i></a>
+  <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-attach-file"></i></a>
   </li>
 </ul>
 </div>
