--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	
 	<div class="fixed-action-btn vertical" style="position: absolute; display: inline-block; right: 10px;bottom:10px;">
   <a class="btn-floating btn-large"style="background-color:#212121;">
-    <img src="info.png"/>
+		<i class="mdi-action-info"></i>
   </a>
   <ul>
   <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-insert-chart"></i></a>
@@ -29,7 +29,7 @@
   </li>
   <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-publish"></i></a>
   </li>
-  <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-attach-file"></i></a>
+  <li><a class="btn-floating grey darken-2"><i class="large mdi-action-android"></i></a>
   </li>
 </ul>
 </div>
