--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
   <div id="app"></div>
 	
 	<div class="fixed-action-btn vertical" style="position: absolute; display: inline-block; right: 10px;bottom:10px;">
-  <a class="btn-floating btn-large"style="background-color:#212121;">
-		<i class="mdi-action-info"></i>
-  </a>
+  <a class="btn-floating btn-large"><i class="mdi-action-info"></i></a>
+		
   <ul>
   <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-insert-chart"></i></a>
   </li>
