--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="app"></div>
 	
 	<div class="fixed-action-btn vertical" style="position: absolute; display: inline-block; right: 10px;bottom:10px;">
-  <a class="btn-floating btn-large"><i class="mdi-action-info"></i></a>
+  <a class="btn-floating btn-large"><img src="info.svg" width="48"/></a>
 		
   <ul>
   <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-insert-chart"></i></a>
