--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 <body>
   <div id="app"></div>
 	
-	<div class="fixed-action-btn horizontal" style="position: absolute; display: inline-block; right: 10px;bottom:10px;">
-  <a class="btn-floating btn-large"><img src="info.svg"/></a>
-		
+<div class="fixed-action-btn horizontal" style="position: absolute; display: inline-block; right: 10px;bottom:10px;">
+  <a class="btn-floating btn-large red">
+    <i class="mdi-social-notifications-none"></i>
+  </a>
   <ul>
   <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-insert-chart"></i></a>
   </li>
