--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 <body>
   <div id="app"></div>
 	
-<div class="fixed-action-btn horizontal" style="position: absolute; display: inline-block; right: 10px;bottom:10px;">
+<div class="fixed-action-btn horizontal" style="position: absolute; display: inline-block; right: 19px;">
   <a class="btn-floating btn-large red">
     <i class="mdi-social-notifications-none"></i>
   </a>
   <ul>
-  <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-insert-chart"></i></a>
+  <li><a class="btn-floating red"><i class="large mdi-editor-insert-chart"></i></a>
   </li>
-  <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-format-quote"></i></a>
+  <li><a class="btn-floating yellow darken-1"><i class="large mdi-editor-format-quote"></i></a>
   </li>
-  <li><a class="btn-floating grey darken-2"><i class="large mdi-editor-publish"></i></a>
+  <li><a class="btn-floating green"><i class="large mdi-editor-publish"></i></a>
   </li>
-  <li><a class="btn-floating grey darken-2"><i class="large mdi-action-android"></i></a>
+  <li><a class="btn-floating blue"><i class="large mdi-editor-attach-file"></i></a>
   </li>
 </ul>
 </div>
