--- a/index.html
+++ b/index.html
@@ -18,25 +18,24 @@
 <body>
   <div id="app"></div>
 	
-<div class="fixed-action-btn horizontal" style="position: absolute; display: inline-block; right: 19px;">
-  <a class="btn-floating btn-large red">
-    <i class="mdi-social-notifications-none"></i>
-  </a>
-  <ul>
-  <li><a class="btn-floating red"><i class="large mdi-editor-insert-chart"></i></a>
-  </li>
-  <li><a class="btn-floating yellow darken-1"><i class="large mdi-editor-format-quote"></i></a>
-  </li>
-  <li><a class="btn-floating green"><i class="large mdi-editor-publish"></i></a>
-  </li>
-  <li><a class="btn-floating blue"><i class="large mdi-editor-attach-file"></i></a>
-  </li>
-</ul>
-</div>
 	
 	
 	
-	
+	<div class="fixed-action-btn">
+                        <a class="btn-floating btn-large">
+                          <i class="mdi-content-add"></i>
+                        </a>
+                        <ul>
+                          <li><a class="btn-floating red" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="large mdi-editor-insert-chart"></i></a>
+                          </li>
+                          <li><a class="btn-floating yellow darken-1" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="large mdi-editor-format-quote"></i></a>
+                          </li>
+                          <li><a class="btn-floating green" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="large mdi-editor-publish"></i></a>
+                          </li>
+                          <li><a class="btn-floating blue" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="large mdi-editor-attach-file"></i></a>
+                          </li>
+                        </ul>
+                      </div>
 	
 	
 	
