--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	
 	<div class="fixed-action-btn">
                         <a class="btn-floating btn-large">
-                          <i class="mdi-content-add"></i>
+                          <i class="mdi-plus-circle"></i>
                         </a>
                         <ul>
                           <li><a class="btn-floating red" style="transform: scaleY(0.4) scaleX(0.4) translateY(40px) translateX(0px); opacity: 0;"><i class="large mdi-editor-insert-chart"></i></a>
