--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <div id="app"></div>
 	
   <!-- Trigger the modal with a button -->
-  <button type="action" class="btn btn-default btn-lg" id="myBtn" style="position:absolute;bottom:10px;right:10px;">
+  <a type="button" class="btn btn-default btn-lg" id="myBtn" style="position:absolute;bottom:10px;right:10px;">
 	<img src="info.png" width="48px"/>
-	</button>
+	</a>
 	  <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
