--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="app"></div>
 	
   <!-- Trigger the modal with a button -->
-  <a type="action" class="btn btn-default btn-lg" id="myBtn" style="position:absolute;bottom:10px;right:10px;background:transparent;">
+  <a type="action" class="btn btn-default btn-lg" id="myBtn" style="position:absolute;bottom:10px;right:10px;background:transparent;color:transparent;">
 	<img src="info.png" width="48px"/>
 	</a>
 	  <!-- Modal -->
