--- a/index.html
+++ b/index.html
@@ -34,7 +34,11 @@
         </div>
        <div class="modal-body" style="padding:40px 50px;">
 	
-				 <h2>hello</h2>
+				 <h3>Scan this image with your Android to download the app!</h3>
+				 <a href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk"><img src="dlqr" width="160px"/></a>
+				 <h3>Tap the image if you're already on your Android device!</h3>
+				
+				
 				</div>
 				<div class="modal-footer">
           <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
