--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@
         </div>
        <div class="modal-body" style="padding:40px 50px;">
 	
-				 <h3>Scan this image with your Android to download the app!</h3>
-				 <a href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk"><img src="dlqr" width="160px"/></a>
-				 <h3>Tap the image if you're already on your Android device!</h3>
+				 <h4 style="color:#121212;">Scan this image with your Android to download the app!</h4>
+				 <a href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk">
+					 <img src="dlqr.png" width="160px"/></a>
+				 <h4 style="color:#121212;">Tap the image if you're already on your Android device!</h4>
 				
 				
 				</div>
