--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header" style="padding:35px 50px;">
+					<h2>Get the Android app!</h2>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
        <div class="modal-body" style="padding:40px 50px;">
 	
-				 <h4 style="color:#121212;">Scan this image with your Android to download the app!</h4>
+				 <h4 style="color:#121212;">Scan image with your Android to download the app!</h4>
 				 <a href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk">
 					 <img src="dlqr.png" width="160px"/></a>
-				 <h4 style="color:#121212;">Tap the image if you're already on your Android device!</h4>
+				 <h4 style="color:#121212;">Or tap if you're already on your Android device!</h4>
 				
 				
 				</div>
