--- a/index.html
+++ b/index.html
@@ -30,20 +30,21 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header" style="padding:10px;">
+					<h3 style="color:#121212;">Dunce Cap Software</h3>
           <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
         </div>
        <div class="modal-body" style="padding:40px;">
 	
-				 <h4 style="color:#121212;">Scan image with your Android to download the app!</h4>
+				 <h4 style="color:#121212;">Scan this image to download the app!</h4>
 				 <a href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk">
 					 <img src="dlqr.png" width="160px"/></a>
-				 <h4 style="color:#121212;">Or tap if you're already on your Android device!</h4>
+				 <h4 style="color:#121212;">Tap the image if on Android already!</h4>
 				
 				
 				</div>
 				<div class="modal-footer">
-          <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal">
-						<span class="glyphicon glyphicon-remove"></span> Cancel</button></div>
+          <button type="submit" class="btn btn-danger btn-default pull-right" data-dismiss="modal">
+						<span class="glyphicon glyphicon-remove"></span></button></div>
 	  </div>	
   </div> 
 </div>
