--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: #121212;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -47,9 +47,9 @@
 .sidenav .closebtn {
     position: absolute;
     top: 0;
-    right: 25px;
+    right: 12px;
     font-size: 36px;
-    margin-left: 50px;
+    margin-left: 40px;
 }
 
 #main {
@@ -79,7 +79,8 @@
   <a href="#">Contact</a>
 </div>
 	<div id="header">
-	 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
+	 <a type="action" class="btn btn-circle btn-lg" style="background:#121212;">
+		 <span style="font-size:30px;cursor:pointer; float:left;margine-left:10px; color:#FFFFFF;" onclick="openNav()">&#9776;</span></a>
 	</div>
 	
   <div id="app"></div>
@@ -93,9 +94,8 @@
     <div class="modal-dialog">
     
       <!-- Modal content-->
-      <div class="modal-content">
+      <div class="modal-content" style="background:#121212; color:#FFFFFF;">
         <div class="modal-header" style="padding:10px;">
-					<h3 style="color:#121212;">Dunce Cap Software</h3>
           <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
         </div>
        <div class="modal-body" style="padding:40px;">
