--- a/index.html
+++ b/index.html
@@ -67,16 +67,20 @@
   position:absolute;
   top:0px;
 		}
+#moframe {
+  width:100%;
+	height:100%;	
+		}		
 	</style>
 </head>
 
 <body>
 	<div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
+  <a href="#">Downloads</a>
+	<a href="#">More Apps</a>	
   <a href="#">Contact</a>
+  <a href="#">About</a>
 </div>
 	<div id="header">
 	 <a type="action" class="btn btn-circle btn-lg" style="background:#121212;">
@@ -99,8 +103,7 @@
           <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
         </div>
        <div class="modal-body" style="padding:40px;">
-	
-				 <h4 style="color:#121212;">Scan this image to download the app!</h4>
+				 <iframe id="moframe" src="download.html" height="300px"></iframe>
 				 <a href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk">
 					 <img src="dlqr.png" width="160px"/></a>
 				 <h4 style="color:#121212;">Tap the image if on Android already!</h4>
