--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     top: 0;
     right: 12px;
     font-size: 36px;
-    margin-left: 40px;
+    margin-left: 20px;
 }
 
 #main {
@@ -77,22 +77,15 @@
 <body>
 	<div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">Downloads</a>
-	<a href="#">More Apps</a>	
-  <a href="#">Contact</a>
-  <a href="#">About</a>
+  <a id="myBtn" href="dls.html" target="moframe">Downloads</a>
+	<a id="myBtn" href="apps.html" target="moframe">More Apps</a>	
+  <a id="myBtn" href="contact.html" target="moframe">Contact</a>
+  <a id="myBtn" href="about.html" target="moframe">About</a>
 </div>
 	<div id="header">
-	 <a type="action" class="btn btn-circle btn-lg" style="background:#121212;">
-		 <span style="font-size:30px;cursor:pointer; float:left;margine-left:10px; color:#FFFFFF;" onclick="openNav()">&#9776;</span></a>
-	</div>
-	
+	 <a type="action" class="btn btn-circle btn-lg" style="background-image: url('dot.png'); float:left; margine-left:10px;">
+		 <span style="font-size:30px;cursor:pointer; color:#FFFFFF;" onclick="openNav()">&#9776;</span></a></div>
   <div id="app"></div>
-	
-  <!-- Trigger the modal with a button -->
-  <a type="action" class="btn btn-default btn-lg" id="myBtn" style="position:absolute;bottom:10px;right:10px;background:transparent;border:0px;">
-	<img src="info.png" width="48px"/>
-	</a>
 	  <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
@@ -104,9 +97,7 @@
         </div>
        <div class="modal-body" style="padding:40px;">
 				 <iframe id="moframe" src="download.html" height="300px"></iframe>
-				 <a href="https://github.com/lifeluvr/ezmusic/raw/gh-pages/Ez%20Music%20APK%20for%20Android/ezmusic.apk">
-					 <img src="dlqr.png" width="160px"/></a>
-				 <h4 style="color:#121212;">Tap the image if on Android already!</h4>
+
 				
 				
 				</div>
