--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <a id="myBtn" href="about.html" target="moframe">About</a>
 </div>
 	<div id="header">
-	 <a type="action" class="btn btn-circle btn-lg" style="background-image: url('dot.png'); float:left; margine-left:10px;">
+	 <a type="action" class="btn btn-circle btn-lg" style="background-image: url('dot.png'); height:48px;width:48px;position:absolute;top:10px;left:14px;">
 		 <span style="font-size:30px;cursor:pointer; color:#FFFFFF;" onclick="openNav()">&#9776;</span></a></div>
   <div id="app"></div>
 	  <!-- Modal -->
