--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
   <a id="myBtn" href="about.html" target="moframe">About</a>
 </div>
 	<div id="header">
-	 <a type="action" class="btn btn-lg" style="background-image:url('dot.png'); width:48px;height:48px;">
-		 <span style="position:absolute;top:12px;left:14px;font-size:30px;cursor:pointer; color:#FFFFFF;" onclick="openNav()">&#9776;</span></a></div>
+	 <a type="action" class="btn btn-lg" style="background-image:url('dot.png'); width:76px;height:76px;position:absolute; top:0px;left:0px;">
+		 <span style="position:absolute;top:12px;left:16px;font-size:30px;cursor:pointer; color:#FFFFFF;" onclick="openNav()">&#9776;</span></a></div>
   <div id="app"></div>
 	  <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
