--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <a id="myBtn" href="about.html" target="moframe">About</a>
 </div>
 	<div id="header">
-	 <a type="action" class="btn btn-lg" style="background-image:url('dot.png'); width:76px;height:76px;position:absolute; top:0px;left:0px;">
+	 <a type="action" class="btn btn-lg" style="border:0px;background-image:url('dot.png'); width:76px;height:76px;position:absolute; top:0px;left:0px;">
 		 <span style="position:absolute;top:15px;left:20px;font-size:30px;cursor:pointer; color:#FFFFFF;" onclick="openNav()">&#9776;</span></a></div>
   <div id="app"></div>
 	  <!-- Modal -->
