--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a id="myBtn" href="dls.html" target="moframe">Downloads</a>
 	<a id="myBtn" href="apps.html" target="moframe">More Apps</a>	
-  <a id="myBtn" href="contact.html" target="moframe">Contact</a>
+  <a id="myBtn" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="moframe">Contact</a>
   <a id="myBtn" href="about.html" target="moframe">About</a>
 </div>
 	<div id="header">
