--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
   width:100%;
 	height:100%;	
 		}		
+		.at-expanding-share-button-toggle-btn		{
+			background:transparent;background-repeat:no-repeat;
+		}
+		.at-expanding-share-button-click-flash {
+			background:transparent;background-repeat:no-repeat;
+		}
 	</style>
 </head>
 
