--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     top: 0;
     left: 0;
     background-color: #121212;
+	  color: #FFF;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
@@ -70,12 +71,6 @@
 #moframe {
   width:100%;
 	height:100%;	
-		}		
-		.at-expanding-share-button-toggle-btn		{
-			background:transparent;background-repeat:no-repeat;
-		}
-		.at-expanding-share-button-click-flash {
-			background:transparent;background-repeat:no-repeat;
 		}
 	</style>
 </head>
