--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     font-size: 25px;
     color: #121212;
     display: block;
-    transition: 0.3s
+    transition: 0.3s;
+		margin-left:-20px;	
 }
 
 .sidenav a:hover, .offcanvas a:focus{
