--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 	<div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a id="myBtn" href="dls.html" target="_blank">Downloads</a>
-	<a id="myBtn" href="apps.html" target="_blank">More Apps</a>	
+	<a id="myBtn" href="https://github.com/lifeluvr?tab=repositories" target="_blank">More Apps</a>	
   <a id="myBtn" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
-  <a id="myBtn" href="about.html" target="_blank">About</a>
+  <a id="myBtn" href="https://github.com/lifeluvr" target="_blank">About</a>
 </div>
 	<div id="header">
 	 <a type="action" class="btn btn-lg" style="margin-left:0px;">
