--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link href="./public/c18ee732f991dc234ab539e0cf7f4e3e.css" rel="stylesheet">
 	<link rel="shortcut icon" href="favicon.png">
-	<style>
-		body {
+<style type="text/css">
+body {
     font-family: "Lato", sans-serif;
     transition: background-color.5s;
 }
@@ -78,10 +78,10 @@
 <body>
 	<div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a id="myBtn" href="dls.html" target="_blank">Downloads</a>
-	<a id="myBtn" href="https://github.com/lifeluvr?tab=repositories" target="_blank">More Apps</a>	
-  <a id="myBtn" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
-  <a id="myBtn" href="https://github.com/lifeluvr" target="_blank">About</a>
+  <!--<a id="myBtn" href="dls.html" target="_blank">Downloads</a>-->
+	<a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a>	
+  <a id="about" href="https://github.com/lifeluvr" target="_blank">About</a>
+  <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
 </div>
 	<div id="header">
 	 <a type="action" class="btn btn-lg" style="margin-left:0px;">
