--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@ body {
 	<div id="mySidenav" class="sidenav">
 		<div
   class="fb-like"
-  data-share="true"
-  data-width="160"
-  data-show-faces="true">
+  data-share="false"
+  data-width="180"
+  data-show-faces="false">
 </div>
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <!--<a id="myBtn" href="dls.html" target="_blank">Downloads</a>-->
