--- a/index.html
+++ b/index.html
@@ -95,12 +95,13 @@ body {
    }(document, 'script', 'facebook-jssdk'));
 </script>
 	<div id="mySidenav" class="sidenav">
-		<div
+		<div class="fb-page" data-href="https://www.facebook.com/EzMusic/" data-tabs="timeline" data-width="180" data-height="200" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/EzMusic/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/EzMusic/">EzMusic</a></blockquote></div>
+		<!--<div
   class="fb-like"
   data-share="false"
   data-width="180"
   data-show-faces="false">
-</div>
+</div-->
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <!--<a id="myBtn" href="dls.html" target="_blank">Downloads</a>-->
 	<a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a>	
