--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <title>EzMusic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -14,7 +13,7 @@
 	<link rel="shortcut icon" href="favicon.png">
 <style type="text/css">
 body {
-    font-family: "Lato", sans-serif;
+    font-family: Comic Sans MS;
     transition: background-color.5s;
 }
 
@@ -95,6 +94,12 @@ body {
    }(document, 'script', 'facebook-jssdk'));
 </script>
 	<div id="mySidenav" class="sidenav">
+		<img src="logo.gif" width="128px" height="52px" style="float:left;margin-left:5px;" />
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <!--<a id="myBtn" href="dls.html" target="_blank">Downloads</a>-->
+	<a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a>	
+  <a id="about" href="https://github.com/lifeluvr" target="_blank">About</a>
+  <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
 		<div class="fb-page" data-href="https://www.facebook.com/EzMusic/" data-tabs="timeline" data-width="180" data-height="200" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/EzMusic/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/EzMusic/">EzMusic</a></blockquote></div>
 		<!--<div
   class="fb-like"
@@ -102,11 +107,6 @@ body {
   data-width="180"
   data-show-faces="false">
 </div-->
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <!--<a id="myBtn" href="dls.html" target="_blank">Downloads</a>-->
-	<a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a>	
-  <a id="about" href="https://github.com/lifeluvr" target="_blank">About</a>
-  <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
 </div>
 	<div id="header">
 	 <a type="action" class="btn btn-lg" style="margin-left:0px;">
