--- a/index.html
+++ b/index.html
@@ -94,19 +94,13 @@ body {
    }(document, 'script', 'facebook-jssdk'));
 </script>
 	<div id="mySidenav" class="sidenav">
-		<img src="logo.gif" width="128px" height="52px" style="float:left;margin-left:5px;" />
+		<img src="logo.gif" width="128px" height="52px" style="float:left;margin-left:5px; margin-top:-40px;" />
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <!--<a id="myBtn" href="dls.html" target="_blank">Downloads</a>-->
 	<a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a>	
   <a id="about" href="https://github.com/lifeluvr" target="_blank">About</a>
   <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
-		<div class="fb-page" data-href="https://www.facebook.com/EzMusic/" data-tabs="timeline" data-width="180" data-height="200" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/EzMusic/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/EzMusic/">EzMusic</a></blockquote></div>
-		<!--<div
-  class="fb-like"
-  data-share="false"
-  data-width="180"
-  data-show-faces="false">
-</div-->
+		<div class="fb-page" data-href="https://www.facebook.com/dcezmusic/" data-tabs="timeline" data-width="190" data-height="200" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/EzMusic/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/EzMusic/">EzMusic</a></blockquote></div>
 </div>
 	<div id="header">
 	 <a type="action" class="btn btn-lg" style="margin-left:0px;">
