--- a/index.html
+++ b/index.html
@@ -96,13 +96,16 @@ body {
 	<div id="mySidenav" class="sidenav">
 		<img src="logo.gif" width="128px" height="48px" style="float:left;margin-left:3px; margin-top:-46px;" />
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <!--<a id="myBtn" href="dls.html" target="_blank">Downloads</a>-->
+  <br> 
+		<!--<a id="myBtn" href="dls.html" target="_blank">Downloads</a>-->
 	<a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a>	
   <a id="about" href="https://github.com/lifeluvr" target="_blank">About</a>
   <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
 		<br>
+		<div style="position:absolute;bottom:0px;">
 		<div class="fb-page" data-href="https://www.facebook.com/dcezmusic/" data-tabs="timeline" data-width="200" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/EzMusic/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/EzMusic/">EzMusic</a></blockquote></div>
 </div>
+	</div>		
 	<div id="header">
 	 <a type="action" class="btn btn-lg" style="margin-left:0px;">
 		 <span style="position:absolute;top:16px;left:21px;font-size:30px;cursor:pointer; color:#FFFFFF;" onclick="openNav()">&#9776;</span></a></div>
