--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ body {
   <a id="about" href="https://github.com/lifeluvr" target="_blank">About</a>
   <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
 		<br>
-		<div style="position:absolute;bottom:0px;">
+		<div style="position:absolute;bottom:0px;margin-right:-18px;">
 		<div class="fb-page" data-href="https://www.facebook.com/dcezmusic/" data-tabs="timeline" data-width="200" data-height="300" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="false"><blockquote cite="https://www.facebook.com/EzMusic/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/EzMusic/">EzMusic</a></blockquote></div>
 </div>
 	</div>		
