--- a/index.html
+++ b/index.html
@@ -78,18 +78,17 @@ span {
 	<a id="about" href="abt.hmtlr" target="myFrame">About</a>
 	<a id="social" href="fbIframe.html" target="myFrame">Social</a>	
   <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
-  <a id="download" href="dld.html" target="myFrame">Download</a>
-	<!--a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a-->	
-
-		
+  <a id="download" href="dld.html" target="myFrame">Download</a>	
 	<iframe src="fbIframe.html" id="myFrame" style="width:200px;height:400px; position:absolute;bottom:0px;left:0px"></iframe>
+	<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="64px" height="20px" style="position:absolute:bottom:10px;left:120px;"/>
 </div>	
-		 <div id="header">
+	<div id="header">
 	  <a type="action" class="btn btn-lg" style="margin-left:0px;">
 		 <span style="position:absolute;top:10px;left:15px;font-size:30px;" onclick="openNav()">&#9776;</span>
 		</a>
 	</div>	
   <div id="app"></div>
+	<!--a id="repos" href="https://github.com/lifeluvr?tab=repositories" target="_blank">Repos</a-->		
 	<script>
 function openNav() {
     document.getElementById("mySidenav").style.width = "200px";
