--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <style type="text/css">
 body {
     font-family: Comic Sans MS;
+	  font-size: 24px;
+	  font-weight:bold;
+	  text-shadow: 0 -1 rgba(0,0,0,.8);
+	  color:#ddd;
     transition: background-color.5s;
 }
 .sidenav {
@@ -74,14 +78,14 @@ span {
 
 <body>
 <div id="mySidenav" class="sidenav">
-	<h3><em>EzMusic</em>&nbsp;&nbsp;<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></h3> 
+	<p style="position:absolute; top:0px;left:0px;width:200px;">&nbsp;<em>EzMusic</em><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
 	<a id="about" href="abt.hmtlr" target="myFrame">About</a>
 	<a id="social" href="fbIframe.html" target="myFrame">Social</a>	
   <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
   <a id="download" href="dld.html" target="myFrame">Download</a>	
 	<iframe src="fbIframe.html" id="myFrame" style="width:200px;height:400px; position:absolute;bottom:0px;left:0px"></iframe>
 	<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="64px" height="20px" style="position:absolute:bottom:10px;left:120px;"/>
-</div>	
+	</div>
 	<div id="header">
 	  <a type="action" class="btn btn-lg" style="margin-left:0px;">
 		 <span style="position:absolute;top:10px;left:15px;font-size:30px;" onclick="openNav()">&#9776;</span>
