--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ span {
 	<a id="social" href="fbIframe.html" target="myFrame">Social</a>	
   <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
   <a id="download" href="dld.html" target="myFrame">Download</a>	
-	<iframe src="fbIframe.html" id="myFrame" style="width:200px;height:400px; position:absolute;bottom:0px;left:0px"></iframe>
-	<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="64px" height="20px" style="position:absolute:bottom:10px;left:120px;"/>
+	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:400px; position:absolute;bottom:0px;left:-10px;overflow-y:hidden;"></iframe>
+	<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style="position:absolute:bottom:10px;left:120px;"/>
 	</div>
 	<div id="header">
 	  <a type="action" class="btn btn-lg" style="margin-left:0px;">
