--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@ span {
 
 <body>
 <div id="mySidenav" class="sidenav">
-	<p style="position:absolute; top:0px;left:0px;width:200px;">&nbsp;<em>EzMusic</em><a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
+	<p style="position:absolute; top:0px;left:-60px;width:260px;">&nbsp;<em>EzMusic</em>
+		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
 	<a id="about" href="abt.hmtlr" target="myFrame">About</a>
 	<a id="social" href="fbIframe.html" target="myFrame">Social</a>	
   <a id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
