--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@ span {
 
 <body>
 <div id="mySidenav" class="sidenav">
-	<p style="position:absolute; top:0px;left:-60px;width:260px;">&nbsp;<em>EzMusic</em>
+	<p style="position:absolute; top:10px;left:-80px;width:260px;">&nbsp;<em>EzMusic</em>
 		<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
-	<a style="margin-top:-10px;" id="about" href="abt.hmtlr" target="myFrame">About</a>
-	<a style="margin-top:-10px;" id="social" href="fbIframe.html" target="myFrame">Social</a>	
-  <a style="margin-top:-10px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
-  <a style="margin-top:-10px;" id="download" href="dld.html" target="myFrame">Download</a>	
+	<a style="margin-top:-20px;margin-left:-6px;" id="about" href="abt.hmtlr" target="myFrame">About</a>
+	<a style="margin-top:-10px;margin-left:-6px;" id="social" href="fbIframe.html" target="myFrame">Social</a>	
+  <a style="margin-top:-10px;margin-left:-6px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
+  <a style="margin-top:-10px;margin-left:-6px;" id="download" href="dld.html" target="myFrame">Download</a>	
 	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:400px; position:absolute;bottom:0px;left:-3px;overflow-y:hidden;"></iframe>
-	<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/>
+	<!--img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/-->
 	</div>
 	<div id="header"><a type="action" class="btn btn-lg" style="margin-left:0px;">
 	<span style="position:absolute;top:10px;left:15px;font-size:30px;" onclick="openNav()">&#9776;</span>
