--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ body {
   top:0px;
 }
 #myframe {
-  margin-left:-10px;
+  margin-left:-7px;
 	height:100%;	
 }
 span {
@@ -83,7 +83,7 @@ span {
   <a style="margin-top:-20px;margin-left:-40px;" id="download" href="dld.html" target="myFrame">Download</a>	
   <a style="margin-top:-10px;margin-left:-40px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
 	<a style="margin-top:-10px;margin-left:-40px;" id="about" href="abt.hmtlr" target="myFrame">About</a>
-		<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/>
+		<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/><br><br>
 	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:600px;margin-left:-10px;overflow-y:hidden;"></iframe>
 
 	</div>
