--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ span {
 	<a style="margin-top:-20px;margin-left:-40px;" id="download" href="dld.html" target="myFrame">Download</a>	
   <a style="margin-top:-10px;margin-left:-40px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
 	<a style="margin-top:-10px;margin-left:-40px;" id="about" href="abt.hmtlr" target="myFrame">About</a><br>
-		<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style=""/><br><br>
+		<img src="logo.gif" id="logo" alt="Dunce Cap Software" width="98px" height="36px" style="margin-left:-10px;"/><br><br>
 	<iframe src="fbIframe.html" id="myFrame" style="border:0px;width:200px;height:600px;margin-left:-10px;overflow-y:hidden;"></iframe>
 
 	</div>
