--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@ span {
 
 <body>
 <div id="mySidenav" class="sidenav" style="overflow-y:hidden;">
-	<p style="background-color:#FFF;position:absolute; top:10px;left:-72px;width:280px;">&nbsp;<em style="color:#121212;">EzMusic</em>
-	<a style="position:absolute; top:-20px;left:260px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a></p> 
-  <br>
-	<!--a style="margin-top:-20px;margin-left:-40px;" id="download" href="dl.html" target="myFrame">Download</a>	
+	<a style="position:absolute; top:-20px;left:260px;" href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <!--br>
+	<a style="margin-top:-20px;margin-left:-40px;" id="download" href="dl.html" target="myFrame">Download</a>	
   <a style="margin-top:-10px;margin-left:-40px;" id="chat" href="https://friendly-chat-b2d6a.firebaseapp.com/" target="_blank">Contact</a>
-	<a style="margin-top:-10px;margin-left:-40px;" id="about" href="abt.hmtlr" target="myFrame">About</a--><br>
-	<br>
-	<iframe src="fbIframe.html" name="myFrame" id="myFrame" style="border:0px;width:280px;height:600px;margin-left:-10px;overflow-y:hidden;"></iframe>
+	<a style="margin-top:-10px;margin-left:-40px;" id="about" href="abt.hmtlr" target="myFrame">About</a><br-->
+	
+	<iframe src="fbIframe.html" name="myFrame" id="myFrame" style="border:0px;width:300px;height:600px;margin-left:-10px;overflow-y:hidden;"></iframe>
 	</div>
 	<div id="header"><a type="action" class="btn btn-lg" style="margin-top:6px;">
 	<span style="position:absolute;top:0px;left:10px;font-size:30px;" onclick="openNav()">&#9776;</span>
