--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@ body {
     top: 0;
     right: 12px;
     font-size: 36px;
-    margin-left: 20px;
 }
 #main {
     transition: margin-left .5s;
@@ -65,8 +64,7 @@ body {
   top:0px;
 }
 #myframe {
-  margin-left:-7px;
-	height:100%;	
+  position:absolute;top:0px;left:0px;
 }
 span {
 	cursor:pointer;
