--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
     left: 0;
     background-color: #FFF;
     transition: 0.5s;
-    padding-top: 20px;
+    padding-top: 0px;
 	  overflow-y:hidden;
 	  overflow-x: hidden;
 }
@@ -46,7 +46,7 @@ body {
 }
 .sidenav .closebtn {
     position: absolute;
-    top: 0;
+    top: 8px;
     right: 12px;
     font-size: 36px;
 }
